# OpenOSD-X

./: .gitignore  CMakeLists.txt  Makefile  README.md  README_jp.md
.github/workflows/: build.yml
CubeIDE/: openosd-x.ioc
OpenOSD-X-CBU6/: .mxproject  OpenOSD-X-CBU6.ioc
OpenOSD-X-CBU6/Core/Inc/: main.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h
OpenOSD-X-CBU6/Core/Src/: main.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c
Src/: .mxproject  OpenOSD-WeAct.ioc  STM32G431KBTX_FLASH.ld  openosd-x.ioc
Src/Core/Inc/: char_canvas.h  cli.h  flash.h  font.h  led.h  log.h  main.h  msp.h  mspvtx.h  rtc6705.h  setting.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h  sys_timer.h  target.h  temp.h  uart_dma.h  videosignal_gen.h  vtx.h
Src/Core/Src/: char_canvas.c  cli.c  flash.c  led.c  main.c  main.c.old  msp.c  mspvtx.c  rtc6705.c  setting.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c  sys_timer.c  system_stm32g4xx.c  target.c  temp.c  uart_dma.c  videosignal_gen.c  vtx.c
Src/Core/Startup/: startup_stm32g431kbtx.s
Src/Debug/: makefile  sources.mk
Src/Debug/Core/Src/: main.cyclo  stm32g4xx_hal_msp.cyclo  stm32g4xx_it.cyclo  subdir.mk
Src/Debug/Drivers/STM32G4xx_HAL_Driver/Src/: subdir.mk
Src/Drivers/STM32G4xx_HAL_Driver/Src/: stm32g4xx_hal_dma.c  stm32g4xx_hal_flash.c  stm32g4xx_hal_flash_ex.c
Src/RTT/: SEGGER_RTT_Syscalls_GCC.c
cmake/: gcc-arm-none-eabi.cmake  rtt.cmake  version.c.in
cmake/stm32g4xx/: CMakeLists.txt
doc/: seq.puml  vpd_table.md
openosd-x/: .mxproject  openosd-x.ioc
openosd-x/Core/Inc/: stm32g4xx_hal_conf.h
openosd-x/Core/Src/: main.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c
openosd-x/openosd-x/: openosd-x.ioc
openosd-x/openosd-x/Core/Src/: main.c
scripts/: BFinitPassthroughMspreboot_bf45.py  BFinitPassthroughMspreboot_bf46.py  SerialPassthrough.py  flashOpenOSD-X.py  serials_find.py  string2hex.py
